adds Client class into Account class - object composition

--- a/bankProject/bankProject.project
+++ b/bankProject/bankProject.project
@@ -93,6 +93,8 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
+    <File Name="Client.cpp"/>
+    <File Name="Client.hpp"/>
     <File Name="Account.hpp"/>
     <File Name="Account.cpp"/>
     <File Name="main.cpp"/>
