adds CPF class and validation method on it

--- a/bankProject/bankProject.project
+++ b/bankProject/bankProject.project
@@ -93,6 +93,8 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
+    <File Name="CPF.cpp"/>
+    <File Name="CPF.hpp"/>
     <File Name="Client.cpp"/>
     <File Name="Client.hpp"/>
     <File Name="Account.hpp"/>
